--- a/sankey_test.html
+++ b/sankey_test.html
@@ -4,30 +4,87 @@
 <title>SANKEY Experiment</title>
 <style>
 
-.node rect {
-  cursor: move;
-  fill-opacity: .9;
-  shape-rendering: crispEdges;
-}
+  .node rect {
+    cursor: move;
+    fill-opacity: .9;
+    shape-rendering: crispEdges;
+  }
 
-.node text {
-  pointer-events: none;
-  text-shadow: 0 1px 0 #fff;
-}
+  .node text {
+    pointer-events: none;
+    text-shadow: 0 1px 0 #fff;
+  }
 
-.link {
-  fill: none;
-  stroke: #000;
-  stroke-opacity: .2;
-}
+  .link {
+    fill: none;
+    stroke: #000;
+    stroke-opacity: .2;
+  }
 
-.link:hover {
-  stroke-opacity: .5;
-}
+  .link:hover {
+    stroke-opacity: .5;
+  }
 
+  h1, h2, h3 {
+    line-height: 12px !important;
+  }
+  .d3-tip h1 {
+    font-size: 14px;
+    padding: 0;
+    margin-bottom: 5px;
+    width: 100%;
+  }
+  .d3-tip h2 {
+    font-weight: bold;
+    font-size: 12px;
+    padding-right: inherit;
+    padding-left: inherit;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    margin: 0px;
+  }
+  .d3-tip h3 {
+    font-weight: normal;
+    font-size: 8px;
+    margin: 0;
+    padding: 0;
+  }
+  .d3-tip table {
+    font-weight: normal;
+    font-size: 12px;
+    padding: none;
+    margin: 0;
+    width: 100%;
+    border: none;
+    border-collapse: collapse;
+  }
+  .d3-tip td {
+    padding-top: 2px;
+    padding-bottom: 2px;
+  }
+  .d3-tip .col-left {
+    padding-right: 8px;
+  }
+  .d3-tip .table-wrapper {
+    margin: 0;
+    padding: inherit;
+    border: none;
+  }
+  .d3-tip {
+    line-height: 1;
+    font-weight: normal;
+    padding: 4px;
+    background: white;
+    color: black;
+    border-radius: 2px;
+    pointer-events: none;
+    background:  white;
+    box-shadow: 1px 1px 4px grey;
+  }
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="d3.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.js"></script>
 <script src="sankey.js"></script>
 <script src="sankey_test.js"></script>
 <body>
