--- a/sankey_test.html
+++ b/sankey_test.html
@@ -25,6 +25,16 @@
   stroke-opacity: .5;
 }
 
+div.tooltip {
+    position: absolute;
+    padding: 5px;
+    font: 12px sans-serif;
+    background: #fff;
+    border: 1px solid #666;
+    border-radius: 2px;
+    pointer-events: none;
+}
+
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="d3.js"></script>
